# Conforming-tet-shell

./: .gitignore  CMakeLists.txt  README.md
TetWild/: CMakeLists.txt
TetWild/src/: main.cpp
TetWild/src/shell/: Label.cpp  Label.h
TetWild/src/tetwild/: Preprocess.cpp  tetwild.cpp
cmake/: TetShellDependencies.cmake  TetShellDownloadExternal.cmake  TetShellUtils.cmake  TetWildDependencies.cmake  TetWildDownloadExternal.cmake  Warnings.cmake  geogram.cmake
include/tetwild/: Args.h  tetwild.h
python/curve/: assembler.py  cubic_fitting.py  fem_generator.py  one_ring_optimize.py  sphere_gen.py  surface_to_curved_layer.py  utils.py
python/curve/.ipynb_checkpoints/: surface_to_curved_layer-checkpoint.py
python/visualize/: BCC-hist.py  Breve2D.py  CurvedFitBunny.py  FourLayerShellGen.py  HigherOrderFitting.py  LogChecker.py  PrismInit.py  QSlim-Phong.py  Reconstruction.py  Singularity.py  TangentialSmoothing.py  UV-based-transfer.py  Untitled.py  VisBunny.py  WillmoreNominal.py  aabb2d.py  cumin_datagen.py  figurescripts.py  phong_projection.py  test.py  tetgen.py  vis_utils.py
src/: BSPSubdivision.cpp  BSPSubdivision.h  CMakeLists.txt  Logger.cpp  Logger.hpp  Parameters.hpp  Types.hpp  auto_table.cpp  auto_table.hpp  main.cpp  tetwild.cpp  tetwild.h
src/shell/: Label.cpp  Label.h  OptimalEnergy.cpp  OptimalEnergy.h  Shell.cpp  Shell.h  ShellCheck.cpp  ShellCheck.h  TetMeshCheck.cpp  TetMeshCheck.h  Utils.cpp  Utils.h  common.hpp  main_test.cpp
src/test/: main_tetgen.cpp
src/tetwild/: BSPSubdivision.cpp  CGALTypes.h  Common.cpp  DelaunayTetrahedralization.cpp  DelaunayTetrahedralization.h  EdgeCollapser.cpp  EdgeCollapser.h  EdgeRemover.cpp  EdgeRemover.h  EdgeSplitter.cpp  EdgeSplitter.h  InoutFiltering.cpp  LocalOperations.cpp  LocalOperations.h  Logger.cpp  MeshConformer.h  MeshRefinement.cpp  MeshRefinement.h  Preprocess.cpp  Preprocess.h  SimpleTetrahedralization.cpp  SimpleTetrahedralization.h  State.h  TetmeshElements.h  VertexSmoother.cpp  VertexSmoother.h  tetwild.cpp
tests/: CMakeLists.txt
